# clion-custom-defined-compiler-examples

./: README.md
CMake-Embarcadero-BCC32C/: CMakeLists.txt  CMakePresets.json  README.md  custom-compiler-bcc.yaml  embarcadero-toolchain.cmake
CMake-OpenWatcom2/: .clang-format  .gitignore  CMakeLists.txt  README.md  openwatcom2.yaml
CMake-SDCC/: CMakeLists.txt  README.md  cmain.c  custom-compiler-sdcc-stm8.yaml
CMake-Texas-Instruments-C6000-CGT/: CMakeLists.txt  CMakePresets.json  README.md  test.asm
CMake-Texas-Instruments-MSP430-CGT/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmain.c  custom-compiler-msp430.yaml
CMake-armcc/: .gitignore  CMake-armcc.ioc  CMake-armcc.txt  CMakeLists.txt  CMakePresets.json  README.md  armcc-toolchain.cmake  custom-compiler-armcc.yaml
CMake-armcc/Core/Inc/: main.h  stm32l4xx_hal_conf.h
CMake-armcc/Core/Src/: cppmain.cpp  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
CMake-armcc/MDK-ARM/: CMake-armcc.CMake-armcc.cprj  CMake-armcc.uvguix.Ilia.Motornyi  CMake-armcc.uvoptx  CMake-armcc.uvprojx  startup_stm32l432xx.lst  startup_stm32l432xx.s
CMake-armcc/MDK-ARM/RTE/_CMake-armcc/: RTE_Components.h
Makefile-SDCC-pic16/: .gitignore  Makefile  clion-custom-compiler-sdcc-pic16.yaml  main.c
Makefile-Tasking-Tricore/: .gitignore  Makefile  README.md  custom-compiler-tasking-generated.yaml  custom_compiler_yaml_tasking.py  env.bat  main.cpp
configs/: README.md  custom-compiler-armcc.yaml
configs/Makefile-SDCC-pic16/: clion-custom-compiler-sdcc-pic16.yaml
configs/TI-C6000-CGT/: custom-compiler-c6000.yaml
configs/sdcc-4.1.0/: custom-compiler-sdcc-stm8.yaml
